--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <meta name="Author" content="Flores vivas">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
-    <title>Document</title>
-
-
+    
+   
   <!-- Favicon -->
   <!-- Estilos CSS Files -->
-  <link rel="stylesheet" href="./aos/aos.css">
+  <link rel="shortcut icon" href="./img/coco.ico">
   <!-- Estilos CSS -->
   <link rel="stylesheet" href="./CSS/bootstrap.min.css">
   <link rel="stylesheet" href="./CSS/index.css">
