--- a/index.html
+++ b/index.html
@@ -3,144 +3,148 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="Author" content="Flores vivas">
-
+    <title>Shopping</title>
+    <meta name="Author" content="Nube">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    
-   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script> 
   <!-- Favicon -->
   <!-- Estilos CSS Files -->
-  <link rel="shortcut icon" href="./img/coco.ico">
+  <link rel="shortcut icon" href="./img/nube.ico">
   <!-- Estilos CSS -->
   <link rel="stylesheet" href="./CSS/bootstrap.min.css">
   <link rel="stylesheet" href="./CSS/index.css">
   <!-- Template Main CSS File -->
-  <!-- Google Tag Manager -->
-  
+  <!-- Google Tag Manager -->  
 </head>
 <body>
   <main>
     <header class="header">
-      <!--navbar-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+    <seccion class="menu">
+          <!-- Navbar Start -->
+    <div class="container-fluid position-relative nav-bar p-0">
+      <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
+          <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
+              <a href="" class="navbar-brand">
+                  <h1 class="m-0 text-primary"><span class="text-dark">Cloud</span></h1>
+              </a>
+              <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                  <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-        </nav>
-      <!--fin navbar-->
-<secction>
-<!-- Carousel -->
-<p>CAROUSEL</p>
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-  <!-- Indicators/dots -->
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+              <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
+                  <div class="navbar-nav ml-auto py-0">
+                      <a href="index.html" class="nav-item nav-link active">Home</a>
+                      <a href="about.html" class="nav-item nav-link">Women´s</a>
+                      <a href="service.html" class="nav-item nav-link">Men´s</a>
+                      <a href="package.html" class="nav-item nav-link">Ambiguous</a>
+                    </div>
+          </nav>
+      </div>
   </div>
-  
-  <!-- The slideshow/carousel -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src=".\img\v1.webp" alt="Morado" class="d-block" style="width:100%">
-    </div>
-    <div class="carousel-item">
-      <img src=".\img\v2.webp" alt="Azul" class="d-block" style="width:100%">
-    </div>
-  </div>
-  
-  <!-- Left and right controls/icons -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </button>
-</div>
-
-<div class="container-fluid mt-3">
- 
-</div>
-</secction>
-<!-- fin Carousel -->
-
-
+  <!-- Navbar End -->
+</seccion class="Contenedor">      
       <section class="inicio">
         <div class="container">
           <div class="row">
             <div class="col">
-              <span>lorem</span>
+              <span>
+              </span>
             </div>
           </div>
         </div>
       </section>
     </header>
-    
+    <secction class="carou">
+     <!--Segundo intento de carrusel-->
+     <div id="template-mo-zay-hero-carousel" class="carousel slide" data-bs-ride="carousel">
+      <ol class="carousel-indicators">
+          <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="0" class="active"></li>
+          <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="1"></li>
+          <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+          <div class="carousel-item active">
+              <div class="container">
+                  <div class="row p-5">
+                      <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                          <img class="img-fluid" src="./img/Persona.webp" alt="">
+                      </div>
+                      <div class="col-lg-6 mb-0 d-flex align-items-center">
+                          <div class="text-align-left align-self-center">
+                              <h1 class="h1 text-success"><b>Cloud</b></h1>
+                              <h3 class="h2">Clothes for today and tomorrow</h3>
+                              <p>                          
+                                Quality, Colors, Style all together to form your outfit
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="container">
+                  <div class="row p-5">
+                      <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                          <img class="img-fluid" src="./img/PorFuera.webp" alt="">
+                      </div>
+                      <div class="col-lg-6 mb-0 d-flex align-items-center">
+                          <div class="text-align-left">
+                              <h1 class="h1">You are welcome to visit</h1>
+                              <h3 class="h2">Our team is waiting for you</h3>
+                              <p>
+                                You are <strong> loved </strong>
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="container">
+                  <div class="row p-5">
+                      <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                          <img class="img-fluid" src="./img/PorDentro.webp" alt="">
+                      </div>
+                      <div class="col-lg-6 mb-0 d-flex align-items-center">
+                          <div class="text-align-left">
+                              <h1 class="h1">Improve your style</h1>
+                              <h3 class="h2">Find yourself</h3>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  </secction>
+     <!--fin segundo intento carrusel-->
    <!-- inicia primera parte de imagenes-->
-      <secction class="ana">
+      <secction class="men">
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
               <div class="card" style="width: 18rem;">
-                <img src="./img/Sunflower.webp" class="card-img-top" alt="...">
+                <img src="./img/Man1.webp" class="card-img-top" alt="...">
                   <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h3 class="card-title">White</h3>
+                  <p class="card-text">Leave everyone impress .</p>
                 </div>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="card" style="width: 18rem;">
-                <img src="./img/Sunflower.webp" class="card-img-top" alt="...">
+                <img src="./img/Man2.webp" class="card-img-top" alt="...">
                   <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h3 class="card-title">Black</h3>
+                  <p class="card-text">Casual and comfy.</p>
                 </div>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="card" style="width: 18rem;">
-                <img src="./img/Sunflower.webp" class="card-img-top" alt="...">
+                <img src="./img/Man3.webp" class="card-img-top" alt="...">
                   <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h3 class="card-title">Blue</h3>
+                  <p class="card-text">Make your dreams true.</p>
                 </div>
               </div>
             </div>
@@ -149,58 +153,83 @@
       </secction>
       <!-- Acaba primera parte de imagenes-->
       <!-- Inicia segunda parte de imagenes-->
-      <secction class="pam">
+      <h1>
+
+      </h1>
+      <secction class="mujer">
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
               <div class="card" style="width: 18rem;">
-                <img src="./img/hortensyu.webp" class="card-img-top" alt="...">
+                <img src="./img/Women1.webp" class="card-img-top" alt="...">
                   <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h3 class="card-title">Light</h3>
+                  <p class="card-text">Soft and warm.</p>
                 </div>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="card" style="width: 18rem;">
-                <img src="./img/hortensyu.webp" class="card-img-top" alt="...">
+                <img src="./img/Women2.webp" class="card-img-top" alt="...">
                   <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h3 class="card-title">Famous</h3>
+                  <p class="card-text">Soft and gentle, perfect for a date.</p>
                 </div>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="card" style="width: 18rem;">
-                <img src="./img/hortensyu.webp" class="card-img-top" alt="...">
+                <img src="./img/Women3.webp" class="card-img-top" alt="...">
                   <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h3 class="card-title">Free</h3>
+                  <p class="card-text">Casual and quirky, to stay or to go, to cut contact and open tinder.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </secction>
+      <h1> 
+
+      </h1>
       <!-- Acaba segunda parte de imagenes-->
-      <!-- Pedacito para coments inicio -->
-     <secction>
-      <div class="container mt-3">
-        <h2> </h2>
-        <p> </p>
-        <form action="/action_page.php">
-          <div class="mb-3 mt-3">
-            <label for="comment">Comments:</label>
-            <textarea class="form-control" rows="5" id="comment" name="text"></textarea>
+      <seccion class="Pie">
+      <!-- Start Footer -->
+    <footer class="bg-dark" id="tempaltemo_footer">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-4 pt-5">
+                  <h4 class="h4 text-success border-bottom pb-3 border-light logo">Cloud</h4>
+                  <ul class="list-unstyled text-light footer-link-list">
+                       <li>
+                          <a class="text-decoration-none" href="tel:010-020-0340">55 8390 9546 7852</a>
+                      </li>
+                      <li>
+                          <i class="fa fa-envelope fa-fw"></i>
+                          <a class="text-decoration-none" href="mailto:info@company.com">coordination@cloud.com</a>
+                      </li>
+                  </ul>
+              </div>
+              <div class="col-md-4 pt-5">
+                  <h4 class="h4 text-dark border-bottom pb-3 border-light">Options</h4>
+                  <ul class="list-unstyled text-light footer-link-list">
+                      <li><a class="text-decoration-none" href="#">Shop</a></li>
+                      <li><a class="text-decoration-none" href="#">Color Consult</a></li>
+                  </ul>
+              </div>
+              <div class="col-md-4 pt-5">
+                  <h4 class="h4 text-dark border-bottom pb-3 border-light">For you</h4>
+                  <ul class="list-unstyled text-light footer-link-list">
+                      <li><a class="text-decoration-none" href="#">Contact</a></li>
+                      <li><a class="text-decoration-none" href="#">About Us</a></li>
+                      <li><a class="text-decoration-none" href="#">Common Questions</a></li>
+                  </ul>
+              </div>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
       </div>
-      <!-- acaba pedacito de comments -->
-    </secction>
+  </footer>
+  <!-- End Footer -->
+      </secction>
     </main>
 </body>
 </html>
